--- a/doc/thesis/analysis.tex
+++ b/doc/thesis/analysis.tex
@@ -1,6 +1,6 @@
 \chapter{Analysis and Discussion}
 
-This chapter contains the discussion of results found from the previous chapters experiments.
+This chapter contains the discussion of results found from the previous chapter's experiments.
 
 \input{analysis/ga.tex}
 \input{analysis/post-op.tex}
