--- a/doc/thesis/analysis/ea.tex
+++ b/doc/thesis/analysis/ea.tex
@@ -1,6 +1,6 @@
 \section{Alternative Algorithms}
 
-Table~\ref{table:ea-de-results} and Table~\ref{table:ea-pso-results} provide a summary of the results from the DE, and PSO experiments respectively. Each experiment in the results table was run 30 times to ensure statistical significance.
+Table~\ref{table:ea-de-results} and Table~\ref{table:ea-pso-results} provide a summary of the results from the DE, and PSO experiments respectively. Each experiment in the results table was run 30 times.
 
 \begin{table}
 	\centering
@@ -36,13 +36,13 @@ Table~\ref{table:ea-de-results} and Table~\ref{table:ea-pso-results} provide a s
 
 The DE, and PSO experiments performed very well on the structure refinement problem. These algorithms were able to succeed in finding better candidate solutions to the problem than the results from the RGA in Section~\ref{sec:ga-analysis} and the PSO in Section~\ref{sec:post-op-analysis}.
 
-Mann-Whitney U tests were performed on the results of the DE, and PSO experiment sets. The results from testing only the PSO experiment set revealed that there were two clear statistical groupings. The two groups consisted of the experiments with a generation count of 100, and the experiments with a generation count of 200. The results within these two groups had no statistical difference but the group with a higher generation count performed statistically better than the other group. Modifying the initial velocity speeds had little statistical affect on the solutions. The results of the DE showed the same outcomes. Two statistical groups formed from the experiments that had the same number of generations. The experiments with the greater number of generations performed statistically better than the other group.
+Mann-Whitney U tests were performed on the results of the DE, and PSO experiment sets. The results from testing only the PSO experiment set revealed that there were two clear statistical groupings. The two groups consisted of the experiments with a generation count of 100, and the experiments with a generation count of 200. The results within each of these two groups had no statistical difference but the group with a higher generation count performed statistically better than the other group. Modifying the initial velocity speeds had little statistical effect on the solutions. The results of the DE showed the same outcomes. Two statistical groups formed from the experiments that had the same number of generations. The experiments with the greater number of generations performed statistically better than the other group.
 
-The two experiment sets shared exactly the same statistical conclusions. The population sizes had no affect on the results of the experiments. The experiments with a population size of 50 performed statistically the same as the ones with a population size of 100. This characteristic could be caused by the method at which the populations are initialized. The molecular dynamic simulation causes the individual atoms to oscillate back and forth. The individuals used in the initial populations may have been similar enough that there was some overlap in the search space. Having two statistical groups forming around the number of generations only makes sense. The group with the greater generation count was allowed more time to explore the search space.
+The two experiment sets shared exactly the same statistical conclusions. The population sizes had no effect on the results of the experiments. The experiments with a population size of 50 performed statistically the same as the ones with a population size of 100. This characteristic could be caused by the method by which the populations are initialized. The molecular dynamics simulation causes the individual atoms to oscillate back and forth. The individuals used in the initial populations may have been similar enough that there was some overlap in the search space. Having two statistical groups forming around the number of generations only makes sense. The group with the greater generation count was allowed more time to explore the search space.
 
 Mann-Whitney U tests were also performed on the results of the DE, and PSO experiment sets, and also the experiment sets from the RGA in Section~\ref{sec:ga-analysis}. The tests showed that PSO performed statistically better than DE, and RGA performed statistically worse than DE, and PSO. These results were actually not that surprising considering the results from the analysis done in Section~\ref{sec:post-op-analysis} showed that PSO worked well on the structure refinement problem.
 
-Figure~\ref{fig:pso-best} demonstrates one of the best candidate solutions. It can be seen that the candidate solution has produced an EXAFS spectrum that is a close approximation of the experimental EXAFS spectrum. The remaining differences in the EXAFS spectra many be due to errors in the experimental EXAFS spectrum. Figure~\ref{fig:generational-data-pso-de} shows the performce of the best performing experiments for PSO and DE. Both algorithms show a steep downward trend within the first 20 generations but the PSO is able to progress at a faster rate.
+Figure~\ref{fig:pso-best} demonstrates one of the best candidate solutions. It can be seen that the candidate solution has produced an EXAFS spectrum that is a close approximation of the experimental EXAFS spectrum. The remaining differences in the EXAFS spectra may be due to errors in the experimental EXAFS spectrum. Figure~\ref{fig:generational-data-pso-de} shows the performce of the best performing experiments for PSO and DE. Both algorithms show a steep downward trend within the first 20 generations but the PSO is able to progress at a faster rate.
 
 \begin{figure}
 	\centering
@@ -91,7 +91,7 @@ Figure~\ref{fig:pso-best} demonstrates one of the best candidate solutions. It c
 
 The results found in this section indicate that algorithms that operate on a continuous space perform better than those that use a more discrete search space. We suspect that this may be true only for smaller search spaces. The complex analyzed in this work is relatively small with only 79 atoms required for EXAFS spectra comparison. If one was attempting to optimize the EXAFS spectrum and the force fields involved, the search space would grow to 1269 atoms. This is an exponential increase is degrees of freedom. In this case a genetic algorithm may be better suited.
 
-Table~\ref{fig:summary-rmsd} provides a comparison of the results found in a previous study~\cite{luber2011s1} to the results found in this work. Each of the algorithms used was able to find a better candidate solution for OEC in S$_{1}$. The major difference between the candidate solutions found in the previous study~\cite{luber2011s1} and this work is that their candidate solutions have also had their force fields optimized. We suspect that the previous researchers goals of optimizing both the force fields and EXAFS spectrum is what caused their candidate solutions to become stuck in a local optima. Force field calculations do play an important role in creating a stable candidate solution but these alterations to the atomic structure may be better suited as a post-optimization.
+Table~\ref{fig:summary-rmsd} provides a comparison of the results found in a previous study~\cite{luber2011s1} to the results found in this work. Each of the algorithms used was able to find a better candidate solution for OEC in S$_{1}$. The major difference between the candidate solutions found in the previous study~\cite{luber2011s1} and this work is that their candidate solutions have also had their force fields optimized. We suspect that the previous researchers' goals of optimizing both the force fields and EXAFS spectrum is what caused their candidate solutions to become stuck in a local optimum. Force field calculations do play an important role in creating a stable candidate solution but these alterations to the atomic structure may be better suited as a post-optimization.
 
 \begin{table}
 	\centering
