--- a/doc/thesis/analysis/ga.tex
+++ b/doc/thesis/analysis/ga.tex
@@ -1,7 +1,7 @@
 \section{Genetic Algorithms}
 \label{sec:ga-analysis}
 
-Table~\ref{table:basic-ga-results} and Table~\ref{table:rga-results} provide a summary of the results from the basic GA, and RGA experiments respectively. Each experiment in the results table was run 30 times to ensure statistical significance.
+Table~\ref{table:basic-ga-results} and Table~\ref{table:rga-results} provide a summary of the results from the basic GA, and RGA experiments respectively. Each experiment in the results table was run 30 times.
 
 \begin{table}
 	\centering
@@ -37,17 +37,17 @@ Table~\ref{table:basic-ga-results} and Table~\ref{table:rga-results} provide a s
 	\label{table:rga-results}
 \end{table}
 
-The Mann-Whitney U test~\cite{mcknight2010mann} is a nonparametric test to determine if two groups are equivalent without assuming the groups have a normal distribution. Mann-Whitney U tests were performed on the results of the basic GA, and RGA experiment sets. The results of the basic GA experiments showed very little statistical significance. Experiment 3, and 5 show the best statistical performance over the other experiments which coincides with these experiments having the best fitness and average fitness scores. The results of the RGA experiments revealed that experiment 8 was able to perform statistically better than the other experiments. Experiments 3, 4, 5, 6, and 7 show little statistical difference and experiments 1, and 2 performed the worst. A comparison of the basic GA, and RGA experiments showed that the RGA performed statistically better than the basic GA.
+The Mann-Whitney U test~\cite{mcknight2010mann} is a nonparametric test to determine if two groups are equivalent without assuming the groups have a normal distribution. Mann-Whitney U tests were performed on the results of the basic GA, and RGA experiment sets. The results of the basic GA experiments showed very little statistical significance. Experiments 3 and 5 show the best statistical performance over the other experiments which coincides with these experiments having the best fitness and average fitness scores. The results of the RGA experiments revealed that experiment 8 was able to perform statistically better than the other experiments. Experiments 3, 4, 5, 6, and 7 show little statistical difference and experiments 1, and 2 performed the worst. A comparison of the basic GA, and RGA experiments showed that the RGA performed statistically better than the basic GA.
 
-A closer look at the data revealed that the basic GA experiments were converging early on local optima. The RGA experiments initially converged on similar optima but were able to find new optima after each restarting phase. Figure~\ref{fig:rga-generational-data} shows what a typical RGA run looks like at each generation. One would notice that there are several \textit{spikes} in the graph where the average fitness jumps. These \textit{spikes} represents a \textit{restart} in the population. During each \textit{restart} the average fitness of the population is disrupted but the fitness quickly improved showing an overall trend downward.
+A closer look at the data revealed that the basic GA experiments were converging early on local optima. The RGA experiments initially converged on similar optima but were able to find new optima after each restarting phase. Figure~\ref{fig:rga-generational-data} shows what a typical RGA run looks like at each generation. One would notice that there are several \textit{spikes} in the graph where the average fitness jumps. These \textit{spikes} represent a \textit{restart} in the population. During each \textit{restart} the average fitness of the population is disrupted but the fitness quickly improved showing an overall downward trend.
 
 The number of generations in each RGA run varied based on when the population converged. Table~\ref{table:rga-results} contains the average number of generations each run had for each experiment.
 
-At first it may seem biased that the RGA was able to find a better candidate solution than the GA because it was allowed to see more unique individuals and ran for more generations but the GA had some pitfalls when it was allowed the same privileges. Increasing the size of the GA's populations had little affect on its ability to find improved candidate solutions. Increasing the number of generations for the GA's also did not affect the solutions. The GA runs would typically converge quickly and become stuck in a local optima. Figure~\ref{fig:ga-generational-data-avg} shows the average best fitness for GA experiment 8.
+At first it may seem biased that the RGA was able to find a better candidate solution than the GA because it was allowed to see more unique individuals and ran for more generations but the GA had some pitfalls when it was allowed the same privileges. Increasing the size of the GA's population had little affect on its ability to find improved candidate solutions. Increasing the number of generations for the GAs also did not affect the solutions. The GA runs would typically converge quickly and become stuck in a local optimum. Figure~\ref{fig:ga-generational-data-avg} shows the average best fitness for GA experiment 3.
 
-The experiments that produced the best candidate solutions for both the GA, and RGA were experiments contained a crossover rate of 70\% and a mutation rate of 30\% compared to the other experiments that contained a crossover rate of 80\% and a mutation rate of 20\%. Since the higher mutation rate performed better than the higher crossover rate this may indicate that the algorithms favoured receiving new information, through exploration, than exploiting the information already contained within the population. Using a higher mutation rate may also indicate that the problem is better suited to be solved using a less discrete search method such as PSO.
+The experiments that produced the best candidate solutions for both the GA, and RGA were experiments that contained a crossover rate of 70\% and a mutation rate of 30\% compared to the other experiments that contained a crossover rate of 80\% and a mutation rate of 20\%. Since the higher mutation rate performed better than the higher crossover rate this may indicate that the algorithms favoured receiving new information, through exploration, than exploiting the information already contained within the population. Using a higher mutation rate may also indicate that the problem is better suited to be solved using a less discrete search method such as PSO since the candidate solutions operate on a continuous space.
 
-The best candidate solution found by the RGA can be seen in Figure~\ref{fig:rga-best-exafs}. The \textit{humps} on the calculated EXAFS spectrum appear to be getting close to the experimental EXAFS spectrum except in a few instances. Where $k$ is between 7.5 and 10 the experimental EXAFS spectrum is more chaotic and the calculated EXAFS spectrum is having a tougher time conforming. The chaotic nature of the data may be due to the margin of error in collecting the experimental EXAFS spectrum. A future technique may be to smooth out the experimental EXAFS spectrum in order to get a more accurate RMSD comparison. Another structure refinement technique could be to reduce the range on $k$ for comparison. Comparing the RMSD between $k = [1,7.5]$ may produce improved results because the fitness function would contains less erroneous data points.
+The best candidate solution found by the RGA can be seen in Figure~\ref{fig:rga-best-exafs}. The \textit{humps} on the calculated EXAFS spectrum appear to be getting close to the experimental EXAFS spectrum except in a few instances. Where $k$ is between 7.5 and 10 the experimental EXAFS spectrum is more chaotic and the calculated EXAFS spectrum is having a tougher time conforming. The chaotic nature of the data may be due to the margin of error in collecting the experimental EXAFS spectrum. A future technique may be to smooth out the experimental EXAFS spectrum in order to get a more accurate RMSD comparison. Another structure refinement technique could be to reduce the range on $k$ for comparison. Comparing the RMSD between $k = [1,7.5]$ may produce improved results because the fitness function would contain fewer erroneous data points.
 
 \begin{figure}
 	\centering
