--- a/doc/thesis/background/ea.tex
+++ b/doc/thesis/background/ea.tex
@@ -16,7 +16,7 @@ Figure~\ref{fig:evolutionaryFlowchart} demonstrates how the basic GA operates. I
 
 The population is a key piece to a GA. Each individual in the population represents a possible candidate solution to the problem that we are attemping to solve. The representation of the individual is usually unique to the problem. Generating the initial population can either be done randomly or by some procedural method. The goal of generating the initial population is to create a diverse enough population to find improved solutions.
 
-During each generation a new population is created using the previous generation's population. Initially the best individuals from the previous population might be copied directly into the new population using an operator called \textit{elitism}. To obtain the remaining individuals needed to fill the new population a \textit{selection} process occurs. Two individuals are chosen using a \textit{selection} method and then one of three options can occur: \textit{crossover}, \textit{mutation}, or \textit{replication}. Crossover mixes two individuals together to create two new individuals, mutation randomly modifies each individual individually, and replication copies the individuals. The two individuals are then placed in the new population and the process is repeated until the new population is the same size as the previous population. Figure~\ref{fig:gaFlowchart} depicts how evolution occurs in a GA. See Subsection~\ref{subsec:ga-operators} for more details on the operators discussed.
+During each generation a new population is created using the previous generation's population. Initially the best individuals from the previous population might be copied directly into the new population using an operator called \textit{elitism}. To obtain the remaining individuals needed to fill the new population a \textit{selection} process occurs. Two individuals are chosen using a \textit{selection} method and then one of three options can occur: \textit{crossover}, \textit{mutation}, or \textit{replication}. Crossover mixes two individuals together to create two new individuals, mutation randomly modifies each individual separately, and replication copies the individuals. The two individuals are then placed in the new population and the process is repeated until the new population is the same size as the previous population. Figure~\ref{fig:gaFlowchart} depicts how evolution occurs in a GA. See Subsection~\ref{subsec:ga-operators} for more details on the operators discussed.
 
 \begin{figure}[H]
 	\centering
@@ -39,7 +39,7 @@ Stopping criteria are used to determine when the GA should stop evolving. There 
 
 Each of the following operators represent a piece of a genetic algorithm. They facilitate the evolutionary process in the effort to find better candidate solutions. Each of these operators has a unique purpose in the search algorithm but there are many different ways in which these goals can be carried out. Only a few of the different methods will be described in this work.
 
-\textit{Selection Operator}: This operator is very important to the \textit{Crossover} and \textit{Mutation} operators. The idea behind this operator is to put selection pressure on the population during the evolutionary process. Individuals with a better fitness score should be allowed a better chance of breeding to create the next population. During the selection process two individuals are chosen for breeding or reproduction. There are several varieties of selection methods but only \textit{k-Tournament selection} will be explained as this is the only method used in this work.
+\textit{Selection Operator}: The idea behind this operator is to put selection pressure on the population during the evolutionary process. Individuals with a better fitness score should be allowed a better chance of continuing on to the next population. During the selection process two individuals are chosen using a selection method and then are either bred together, mutated, or replicated and placed in the next population. There are several varieties of selection methods but only \textit{k-Tournament selection} will be explained as this is the only method used in this work.
 
 The \textit{k}-Tournament selection method works by randomly selecting \textit{k} individuals from the population, where \textit{k} is less than the number of individuals in the population, and selecting the individual that has the best fitness score from the \textit{k} individuals. The value of \textit{k} should be relatively small compared to the size of the population. If the value of \textit{k} is too large it would defeat the purpose of this selection method. For example, if there is a population size of 100 then a suitable value of \textit{k} is around 2-5.
 
