--- a/doc/thesis/introduction/exafs.tex
+++ b/doc/thesis/introduction/exafs.tex
@@ -1,8 +1,8 @@
 \section{X-ray Absorption Spectroscopy}
 
-The following overview is based on information contained in Matthew Newville’s Fundamentals of XAFS (2004)~\cite{newville2004fundamentals}. X-Ray absorption fine structure (XAFS) is a method used to measure the absorption coefficient of a material as a function of energy. X-rays are part of the electromagnetic spectrum with wavelengths ranging from ~25\AA\ to 0.25\AA. All atoms resonate at a specific wavelength. The x-ray is tuned to have the same wavelength as the target atom. A photon from an x-ray is absorbed by an electron in a tightly bound quantum core level of an atom. Absorption only takes place if the binding energy of the core level is less than the energy of the x-ray photon. At the time of absorption a core electron moves to an empty outer shell and another electron moves in to take its place. Eventually the affected electrons decay to their original state. During this time fluorescence energies are emitted that characterize a specific atom.
+The following overview is based on information contained in Matthew Newville's \textit{Fundamentals of XAFS} (2004)~\cite{newville2004fundamentals}. X-Ray absorption fine structure (XAFS) is a method used to measure the absorption coefficient of a material as a function of energy. X-rays are part of the electromagnetic spectrum with wavelengths ranging from ~25\AA\ to 0.25\AA. All atoms resonate at a specific wavelength. The x-ray is tuned to have the same wavelength as the target atom. A photon from an x-ray is absorbed by an electron in a tightly bound quantum core level of an atom. Absorption only takes place if the binding energy of the core level is less than the energy of the x-ray photon. At the time of absorption a core electron moves to an empty outer shell and another electron moves in to take its place. Eventually the affected electrons decay to their original state. During this time fluorescence energies are emitted that characterize a specific atom.
 
-The absorption coefficients measured after the initial absorption are referred to as the Extended X-ray Absorption Fine Structure(EXAFS). During the decay of the electrons to their original state, oscillations occur in the measure of the absorption coefficient. The different frequencies found within the oscillations correspond to different near-neighbour coordination shells, which can be described and modeled according to the EXAFS equation. From the oscillations, the number of neighbouring atoms, the distances to the neighbouring atoms, and the disorder in the neighbour distances can be determined. The energy spectra for OEC in S$_{1}$ is shown in Figure~\ref{fig:oecS1}.
+The absorption coefficients measured after the initial absorption are referred to as the Extended X-ray Absorption Fine Structure(EXAFS). During the decay of the electrons to their original state, oscillations occur in the measure of the absorption coefficient. The different frequencies found within the oscillations correspond to different near-neighbour coordination shells, which can be described and modeled according to the EXAFS equation. From the oscillations, the number of neighbouring atoms, the distances to the neighbouring atoms, and the disorder in the neighbour distances can be determined. The energy spectrum for OEC in S$_{1}$ is shown in Figure~\ref{fig:oecS1}.
 
 \begin{figure*}
 	\begin{tikzpicture}
