--- a/doc/thesis/methodology.tex
+++ b/doc/thesis/methodology.tex
@@ -1,6 +1,6 @@
 \chapter{Methodology}
 
-In this chapter we describe the methodologies used in the various evolutionary algorithms. Section~\ref{sec:problem-encoding} explains how a molecules atomic structure is translated to a more usable encoding. The different methods used for population generation are outlined in Section~\ref{sec:pop-generation}. Section~\ref{sec:ga-operators} defines the genetic operators used in the GA, and RGA and Section~\ref{sec:fitness-exafs} reviews how each individual will be evaluated.
+In this chapter we describe the methodologies used in the various evolutionary algorithms. Section~\ref{sec:problem-encoding} explains how a molecule's atomic structure is translated to a more usable encoding. The different methods used for population generation are outlined in Section~\ref{sec:pop-generation}. Section~\ref{sec:ga-operators} defines the genetic operators used in the GA and RGA and Section~\ref{sec:fitness-exafs} reviews how each individual will be evaluated.
 
 \input{methodology/problem-encoding}
 \input{methodology/population-generation}
