--- a/doc/thesis/methodology/fitness.tex
+++ b/doc/thesis/methodology/fitness.tex
@@ -1,7 +1,7 @@
 \section{Fitness: EXAFS Spectra}
 \label{sec:fitness-exafs}
 
-The goal of structure refinement as shown in Section~\ref{sec:problem-definition} is to find a calculated EXAFS spectrum that matches the experimental EXAFS spectrum. To calculate how close the calculated EXAFS spectra is to the experimental EXAFS spectra, the root-mean-square deviation (RMSD), see Equation~\ref{eq:rmsdFormula}, will be computed between the calculated and experimental EXAFS spectra. Each spectrum is recorded at an increment of 0.05 $k \mathbin{/} A\textsuperscript{-1}$ which allows $EXAFS \chi k\textsuperscript{3}$ to be compared at each increment. The goal is to get the RMSD value as low as possible because then the calculated and experimental EXAFS spectra match as closely as possible. It is not reasonable to expect the RMSD to be zero, because the experimental EXAFS spectra is not perfect. The environment in which the EXAFS spectra is recorded creates small errors in the result.
+The goal of structure refinement as shown in Section~\ref{sec:problem-definition} is to find a calculated EXAFS spectrum that matches the experimental EXAFS spectrum. To calculate how close the calculated EXAFS spectra is to the experimental EXAFS spectra, the root-mean-square deviation (RMSD), see Equation~\ref{eq:rmsdFormula}, will be computed between the calculated and experimental EXAFS spectra. Each spectrum is recorded at an increment of 0.05 $k \mathbin{/} A\textsuperscript{-1}$ which allows the energy levels ($EXAFS \chi k\textsuperscript{3}$) to be compared at each increment. The goal is to get the RMSD value as low as possible because then the calculated and experimental EXAFS spectra match as closely as possible. It is not reasonable to expect the RMSD to be zero, because the experimental EXAFS spectra is not perfect. The environment in which the EXAFS spectra is recorded creates small errors in the result.
 
 \begin{equation}
   \label{eq:rmsdFormula}
