--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -13,7 +13,7 @@ To increase their accuracy the researchers used R-QM/MM. This approach iterative
 
 The researchers speculated that even though the R-QM/MM technique was able to generate an EXAFS spectrum closer to the experimental spectrum their solution was only a local solution because it was based on their original DFT-QM/MM solution.
 
-Later in ~\cite{luber2011s1} the same research group repeated their original experiments performed in ~\cite{sproviero2008model} with updated X-ray diffraction (XRD) data that had a closer resolution of 1.9\AA. They had success in rerunning the DFT-QM/MM, and R-QM/MM experiment but still had the same speculations about remaining in a local optima. Their paper included the best atomic structures they were able to achieve. We have analyzed these structures using the same EXAFS spectra fitness score and included them in Figure~\ref{fig:previous-work-rmsd}.
+Later in ~\cite{luber2011s1} the same research group repeated their original experiments performed in ~\cite{sproviero2008model} with updated X-ray diffraction (XRD) data that had a closer resolution of 1.9\AA. They had success in rerunning the DFT-QM/MM, and R-QM/MM experiment but still had the same speculations about remaining in a local optimum. Their paper included the best atomic structures they were able to achieve. We have analyzed these structures using the same EXAFS spectra fitness score and included them in Table~\ref{fig:previous-work-rmsd}.
 
 \begin{table}
 	\centering
@@ -28,7 +28,7 @@ Later in ~\cite{luber2011s1} the same research group repeated their original exp
 
 \subsection{Genetic Algorithm}
 
-A study conducted in 1999 by W. Cai et al.~\cite{cai1999analysis} had success in EXAFS fitting using an annealing evolutionary algorithm. The researchers combined a genetic algorithm with a simulated annealing algorithm in order to locate the global optima. During each generations new candidate solutions were either accepted or rejected according to the Metropolis criterion. For their EXAFS spectrum analysis the researchers were able to generate an EXAFS spectrum using an equation. The equation was able to generate an EXAFS spectrum based on five structural control parameters: coordination distance (\textit{r}), coordination number (\textit{N}), Debye-Waller factor ($\sigma$), electron mean free path ($\lambda$) and $\Delta{E_{0}}$. The control parameters were randomly generated using specific constraints for each. Least squares fitting was used as an objective function between the experimental and calculated EXAFS spectra. The experimental EXAFS spectrum was generated from two Cu samples. Using the annealing evolutionary algorithm, the researchers were able to find more accurate results than existing methods.
+A study conducted in 1999 by W. Cai et al.~\cite{cai1999analysis} had success in EXAFS fitting using an annealing evolutionary algorithm. The researchers combined a genetic algorithm with a simulated annealing algorithm in order to locate the global optima. During each generation new candidate solutions were either accepted or rejected according to the Metropolis criterion, which is used to control the distribution of the population. For their EXAFS spectrum analysis the researchers were able to generate an EXAFS spectrum using an equation. The equation was able to generate an EXAFS spectrum based on five structural control parameters: coordination distance (\textit{r}), coordination number (\textit{N}), Debye-Waller factor ($\sigma$), electron mean free path ($\lambda$) and $\Delta{E_{0}}$. The control parameters were randomly generated using specific constraints for each. Least squares fitting was used as an objective function between the experimental and calculated EXAFS spectra. The experimental EXAFS spectrum was generated from two Cu samples. Using the annealing evolutionary algorithm, the researchers were able to find more accurate results than existing methods at the time.
 
 \section{Previous Applications}
 \label{sec:prev-app}
@@ -43,7 +43,7 @@ The Laboratory of Crystallography in Zurich, Switzerland developed a method~\cit
 
 \subsection{Differential Evolution}
 
-In 2010 Kalegari, and Lopes used a differential evolution algorithm for protein structure optimization~\cite{kalegari2010differential}. They used a simple representation for the protein structure known as hydrophobic/polar (HP). This allowed them to constrain the system to minimize the search space. The individuals in the DE consisted of a vector of values between $[-\pi, \pi]$ which represent the angles between three monomers. The study was able to find the ground state energy values for problems with smaller sets of amino acids but the researchers found that DE had a tougher time finding the optimal solution as the problem size grew larger.
+In 2010 Kalegari and Lopes used a differential evolution algorithm for protein structure optimization~\cite{kalegari2010differential}. They used a simple representation for the protein structure known as hydrophobic/polar (HP). This allowed them to constrain the system to minimize the search space. The individuals in the DE consisted of a vector of values between $[-\pi, \pi]$ which represent the angles between three monomers. The study was able to find the ground state energy values for problems with smaller sets of amino acids but the researchers found that DE had a tougher time finding the optimal solution as the problem size grew larger.
 
 \subsection{Particle Swarm Optimization}
 
