--- a/doc/thesis/analysis/post-op.tex
+++ b/doc/thesis/analysis/post-op.tex
@@ -1,7 +1,7 @@
 \section{Genetic Algorithm: Post-Optimization}
 \label{sec:post-op-analysis}
 
-Table~\ref{table:post-op-de-results} and Table~\ref{table:post-op-pso-results} provide a summary of the results from the DE, and PSO experiments respectively. Each experiment in the results table was run 30 times to ensure statistical significance. 
+Table~\ref{table:post-op-de-results} and Table~\ref{table:post-op-pso-results} provide a summary of the results from the DE, and PSO experiments respectively. Each experiment in the results table was run 30 times. 
 
 \begin{table}
 	\centering
@@ -27,7 +27,7 @@ Table~\ref{table:post-op-de-results} and Table~\ref{table:post-op-pso-results} p
 	\label{table:post-op-pso-results}
 \end{table}
 
-The two algorithms were performed using individuals generated using two different \textit{initial movement radii}. Using the larger \textit{initial movement radius} of $\pm$0.25\AA\ had a negative impact on the DE, and PSO candidate solutions. The large \textit{initial movement radius} caused the experiments to move from the initial local optima, that was found using the RGA, into sub-optimal solutions. As we decreased the \textit{initial movement radius} the results started to improve. Using the smaller \textit{initial movement radius} of $\pm$0.05\AA\ provided the best results.
+The two algorithms were performed using individuals generated using two different \textit{initial movement radii}. Using the larger \textit{initial movement radius} of $\pm$0.25\AA\ had a negative impact on the DE, and PSO candidate solutions. The large \textit{initial movement radius} caused the experiments to move from the initial local optimum, that was found using the RGA, into sub-optimal solutions. As we decreased the \textit{initial movement radius} the results started to improve. Using the smaller \textit{initial movement radius} of $\pm$0.05\AA\ provided the best results.
 
 The results from the DE experiments were never able to improve upon the seed candidate solution. Decreasing the \textit{initial movement radius} improved the results for the DE but it was still unable to produce results that improved upon the seed candidate solution.
 
@@ -56,4 +56,4 @@ In contrast, the results from the PSO experiments were very successful. Using th
 	\label{fig:post-op-pso-best-exafs}
 \end{figure*}
 
-Mann-Whitney U tests were performed on the results of the DE, and PSO experiment sets and the results from the RGA experiment sets in Section~\ref{sec:ga-analysis}. The results of the PSO experiments were statistically better than the results of the DE experiments. The improved results found using the reduced \textit{initial movement radius} were statistically consistent. Comparing the PSO experiment results with the RGA experiment results showed that the PSO performed statistically better than the RGA. Its worth noting that although the DE experiments could not improve upon the seed candidate solution the results of the DE compared to the RGA were statistically better.
+Mann-Whitney U tests were performed on the results of the DE, and PSO experiment sets and the results from the RGA experiment sets in Section~\ref{sec:ga-analysis}. The results of the PSO experiments were statistically better than the results of the DE experiments. The improved results found using the reduced \textit{initial movement radius} were statistically consistent. Comparing the PSO experiment results with the RGA experiment results showed that the PSO performed statistically better than the RGA. It is worth noting that although the DE experiments could not improve upon the seed candidate solution the results of the DE compared to the RGA were statistically better.
