--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusions and Future Work}
 
-This thesis studies the performance of multiple population based search algorithms on the structure refinement problem using EXAFS spectra comparison. The experimental EXAFS spectrum for the oxygen-evolving complex was used for testing. We have shown that a basic GA, and RGA perform well at finding close candidate solutions to the experimental EXAFS spectrum. DE, and PSO were performed as a post-optimization of the basic GA, and RGA in order to improve upon their results. The PSO was successful in finding an improved optima. DE, and PSO were then run as a more direct comparison to the basic GA, and RGA. These algorithms were able to out perform the GA, and RGA results showing that algorithms that perform on a continuous space are better suited for this type of problem. Although these algorithms were successful is finding a new optima for the oxygen-evolving complex in S$_{1}$, future testing on other states of the oxygen-evolving complex or other complexes should be performed.
+This thesis studies the performance of multiple population-based search algorithms on the structure refinement problem using EXAFS spectra comparison. The experimental EXAFS spectrum for the oxygen-evolving complex was used for testing. We have shown that a basic GA, and RGA perform well at finding close candidate solutions to the experimental EXAFS spectrum. DE, and PSO were performed as a post-optimization of the basic GA, and RGA in order to improve upon their results. The PSO was successful in finding an improved optima. DE, and PSO were then run as a more direct comparison to the basic GA, and RGA. These algorithms were able to outperform the GA, and RGA results showing that algorithms that perform on a continuous space are better suited for this type of problem. Although these algorithms were successful in finding a new optimum for the oxygen-evolving complex in S$_{1}$, future testing on other states of the oxygen-evolving complex or other complexes should be performed.
 
 This work was primarily a study of the computational side of the structure refinement problem. The atomic structures produced in this work were only validated against the experimental EXAFS spectrum. A biologist will still have to verify which candidate solutions are potential solutions to the problem. Future research into using population based search algorithms on the structure refinement problem would benefit from including force field calculations on the candidate solutions. A multi-objective approach where each atomic structure's EXAFS spectrum is refined as well as the potential energy of the atomic structure is minimized should be investigated.
 
-A molecular dynamic simulation was used to generate individuals that were appropriate to seed the initial populations of the algorithms examined in this work. Future work might benefit from repeated use of the molecular dynamic simulation. Once a candidate solution is located this candidate could be placed back into the molecular dynamic simulation where a new batch of candidate solutions could be generated to seed another round of refinement. This method would allow the search algorithm to continue to be single objective because the molecular dynamic simulation would correct any issues with the atomic structures force fields.
+A molecular dynamics simulation was used to generate individuals that were appropriate to seed the initial populations of the algorithms examined in this work. Future work might benefit from repeated use of the molecular dynamics simulation. Once a candidate solution is located this candidate could be placed back into the molecular dynamics simulation where a new batch of candidate solutions could be generated to seed another round of refinement. This method would allow the search algorithm to continue to be single objective because the molecular dynamics simulation would correct any issues with the atomic structures force fields.
